--- a/source/project/style.css
+++ b/source/project/style.css
@@ -4,9 +4,20 @@ body {
   line-height: 26px;
   font-family: "Arial", sans-serif;
   color: #222222;
-
   background: #ffffff url("img/bg-page.png") no-repeat top center;
 }
+
+/*body {
+  margin: 0;
+  min-width: 960px;
+  font-family: "Montserrat", "Helvetica", "Arial", sans-serif;
+  font-size: 16px;
+  line-height: 32px;
+  color: #f2f2f2;
+  background-color: #080208;
+  background-repeat: no-repeat;
+  background-position: top center;
+}*/
 
 h1 {
   font-size: 36px;
